--- a/policies/correlationid-policy/pom.xml
+++ b/policies/correlationid-policy/pom.xml
@@ -40,7 +40,7 @@
 			<groupId>org.apache.cxf.xjc-utils</groupId>
 			<artifactId>cxf-xjc-runtime</artifactId>
 			<version>${cxf.xjc-utils.version}</version>
-<!-- 			<scope>test</scope> -->
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
