--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -36,7 +36,7 @@
         <jclouds.version>2.1.2</jclouds.version>
         <pax-url-classpath.version>1.2.8</pax-url-classpath.version>
         <wss4j.version>2.2.2</wss4j.version>
-        <xerces.version>2.11.0_1</xerces.version>
+        <xerces.version>2.12.0_1</xerces.version>
         <log4j.version>1.2.17</log4j.version>
         <pax-web.version>7.2.8</pax-web.version>
         <pax-logging.version>1.10.1</pax-logging.version>
@@ -1015,6 +1015,10 @@
                                     <replacefilter
                                         token="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xstream/1.4.8_1&lt;"
                                         value="&gt;mvn:org.apache.servicemix.bundles/org.apache.servicemix.bundles.xstream/1.4.10_1&lt;"/>
+                                    <replacefilter>
+                                        <replacetoken>feature version="[4,5)"&gt;spring&lt;</replacetoken>
+                                        <replacevalue>feature version="[4,6)"&gt;spring&lt;</replacevalue>
+                                    </replacefilter>
                                 </replace>
                                 <!-- patch for decanter bundles (TESB-23679, TESB-23697) -->
                                 <replace file="target/dependencies/apache-karaf-decanter-${decanter.version}-features.xml">
