--- a/talend-esb/src/main/distribution/text/container/etc/system.properties
+++ b/talend-esb/src/main/distribution/text/container/etc/system.properties
@@ -56,6 +56,12 @@ karaf.shell.init.script = shell.init.script,scripts/*.script
 # karaf.shell.history.maxSize = 0
 
 #
+# Sets the maximum size of the local shell command history file. If not set,
+# defaults to 10000 entries.
+#
+# karaf.shell.history.file.maxSize = 10000
+
+#
 # Deletes the entire karaf.data directory at every start
 #
 karaf.clean.all = false
@@ -92,6 +98,8 @@ xml.catalog.files =
 #
 org.apache.servicemix.specs.debug = false
 org.apache.servicemix.specs.timeout = 0
+org.apache.karaf.specs.debug = false
+org.apache.karaf.specs.timeout = 0
 
 #
 # Settings for the OSGi 4.3 Weaving
