--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -28,8 +28,9 @@
 
 	<groupId>org.talend.esb.assembly</groupId>
 	<artifactId>talend-esb</artifactId>
-	<name>Talend ESB :: Assembly</name>
+    <name>Talend ESB :: Assembly</name>
 	<packaging>pom</packaging>
+    <description>Packages TESB_SE final product</description>
 
 	<properties>
         <zookeeper.package.version>${zookeeper.version}</zookeeper.package.version>
@@ -41,6 +42,10 @@
         <pax-web.version>7.2.8</pax-web.version>
         <pax-logging.version>1.10.1</pax-logging.version>
         <javax-annotation.version>1.3</javax-annotation.version>
+        <karaf-maven-plugin.version>4.2.4-SNAPSHOT</karaf-maven-plugin.version>
+
+        <!-- used for assembly & dependency type, overwritten by dev-unix-bin-only, dev-win-bin-only and dev-dir-only profiles -->
+        <assembly.formats>tar.gz,zip</assembly.formats>
 	</properties>
 
 	<dependencies>
@@ -91,7 +96,7 @@
 			<plugin>
 				<groupId>org.apache.karaf.tooling</groupId>
 				<artifactId>karaf-maven-plugin</artifactId>
-                <version>${karaf.version}</version>
+                <version>${karaf-maven-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>add-features-to-repo</id>
@@ -111,7 +116,7 @@
 <!--                                 <descriptor>mvn:org.apache.cxf.karaf/apache-cxf/${cxf.version}/xml/features</descriptor> -->
 <!--                                 <descriptor>mvn:org.apache.activemq/activemq-karaf/${activemq.version}/xml/features</descriptor> -->
 <!--                                 <descriptor>mvn:org.apache.camel.karaf/apache-camel/${camel.version}/xml/features</descriptor> -->
-<!--                                 <descriptor>file:${basedir}/target/dependencies/apache-camel-${camel.version}-features.xml</descriptor> -->
+<!--                                 <descriptor>file:${basedir}/target/dependencies/apache-camel-${camel.version}-features.xml</descriptor>-->
                                 <descriptor>mvn:org.talend.esb/features/${project.version}/xml</descriptor>
                                 <descriptor>mvn:org.talend.esb.auxiliary.storage/auxiliary-storage-features/${project.version}/xml</descriptor>
 							</descriptors>
@@ -251,7 +256,7 @@
 						        <feature>camel-http4</feature>
                                 <feature>camel-hystrix</feature>
 						        <feature>camel-ibatis</feature>
-						        <feature>camel-ical</feature>
+<!--						       FIXME JGR <feature>camel-ical</feature>-->
                                 <feature>camel-iec60870</feature>
 <!--                                 <feature>camel-ignite</feature> -->
 						        <feature>camel-infinispan</feature>
@@ -1050,12 +1055,12 @@
 						</goals>
 						<configuration>
 							<descriptors>
-								<descriptor>src/main/descriptors/win-bin.xml</descriptor>
-								<descriptor>src/main/descriptors/unix-bin.xml</descriptor>
+								<descriptor>src/main/descriptors/assembly.xml</descriptor>
 							</descriptors>
 							<appendAssemblyId>false</appendAssemblyId>
 							<tarLongFileMode>gnu</tarLongFileMode>
                             <finalName>TESB_SE-V${packages.version}</finalName>
+                            <formats>${assembly.formats}</formats>
 						</configuration>
 					</execution>
 				</executions>
@@ -1076,6 +1081,28 @@
             </plugin>
 		</plugins>
 	</build>
+
+    <!-- specific profiles for building only tar.gz or zip distributions -->
+    <profiles>
+        <profile>
+            <id>dev-unix-bin-only</id>
+            <properties>
+                <assembly.formats>tar.gz</assembly.formats>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev-win-bin-only</id>
+            <properties>
+                <assembly.formats>zip</assembly.formats>
+            </properties>
+        </profile>
+        <profile>
+            <id>dev-dir-only</id>
+            <properties>
+                <assembly.formats>dir</assembly.formats>
+            </properties>
+        </profile>
+    </profiles>
 
     <repositories>
         <repository>
