TESB-24619 update the custom.properties

--- a/talend-esb/src/main/distribution/text/container/etc/custom.properties
+++ b/talend-esb/src/main/distribution/text/container/etc/custom.properties
@@ -26,6 +26,11 @@ karaf.framework=equinox
 
 karaf.systemBundlesStartLevel=50
 
+org.osgi.framework.system.packages.extra = \
+    com.sun.jmx.mbeanserver, \
+    com.sun.management, \
+    sun.management
+
 # Adds event logging package to classes that can be serialized in ObjectMessages
 org.apache.activemq.SERIALIZABLE_PACKAGES=java.lang,java.util,org.apache.activemq,org.fusesource.hawtbuf,com.thoughtworks.xstream.mapper,org.talend.esb.eventlogging.common
 
