--- a/talend-esb/src/main/distribution/text/container/etc/custom.properties
+++ b/talend-esb/src/main/distribution/text/container/etc/custom.properties
@@ -29,7 +29,102 @@ karaf.systemBundlesStartLevel=50
 org.osgi.framework.system.packages.extra = \
     com.sun.jmx.mbeanserver, \
     com.sun.management, \
-    sun.management
+    sun.management, \
+    org.apache.xerces.dom;uses:=\"org.apache.xerces.dom3.as,org.apache.xerces.impl,org.apache.xerces.impl.dv,org.apache.xerces.impl.validation,org.apache.xerces.impl.xs,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.parser,org.apache.xerces.xs,org.w3c.dom,org.w3c.dom.events,org.w3c.dom.ls,org.w3c.dom.ranges,org.w3c.dom.traversal\";version=2.12.0, \
+    org.apache.xerces.dom.events;uses:=\"org.w3c.dom,org.w3c.dom.events,org.w3c.dom.views\";version=2.12.0, \
+    org.apache.xerces.dom3.as;uses:=\"org.w3c.dom,org.w3c.dom.ls\";version=2.12.0, \
+    org.apache.xerces.impl;uses:=\"org.apache.xerces.impl.dtd,org.apache.xerces.impl.validation,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.grammars,org.apache.xerces.xni.parser,org.xml.sax\";version=2.12.0, \
+    org.apache.xerces.impl.dtd;uses:=\"org.apache.xerces.impl,org.apache.xerces.impl.dtd.models,org.apache.xerces.impl.dv,org.apache.xerces.impl.validation,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.grammars,org.apache.xerces.xni.parser\";version=2.12.0, \
+    org.apache.xerces.impl.dtd.models;uses:=org.apache.xerces.xni;version=2.12.0, \
+    org.apache.xerces.impl.dv;uses:=\"org.apache.xerces.impl.xs.util,org.apache.xerces.util,org.apache.xerces.xs\";version=2.12.0, \
+    org.apache.xerces.impl.dv.dtd;uses:=org.apache.xerces.impl.dv;version=2.12.0, \
+    org.apache.xerces.impl.dv.util;uses:=\"org.apache.xerces.xs,org.apache.xerces.xs.datatypes\";version=2.12.0, \
+    org.apache.xerces.impl.dv.xs;uses:=\"javax.xml.datatype,org.apache.xerces.impl.dv,org.apache.xerces.impl.xs,org.apache.xerces.impl.xs.util,org.apache.xerces.util,org.apache.xerces.xs,org.apache.xerces.xs.datatypes,org.w3c.dom\";version=2.12.0, \
+    org.apache.xerces.impl.io;uses:=org.apache.xerces.util;version=2.12.0, \
+    org.apache.xerces.impl.msg;uses:=org.apache.xerces.util;version=2.12.0, \
+    org.apache.xerces.impl.validation;uses:=\"org.apache.xerces.impl.dv,org.apache.xerces.util,org.apache.xerces.xni\";version=2.12.0, \
+    org.apache.xerces.impl.xpath;uses:=\"org.apache.xerces.util,org.apache.xerces.xni\";version=2.12.0, \
+    org.apache.xerces.impl.xpath.regex;version=2.12.0, \
+    org.apache.xerces.impl.xs;uses:=\"org.apache.xerces.dom,org.apache.xerces.impl,org.apache.xerces.impl.dv,org.apache.xerces.impl.dv.xs,org.apache.xerces.impl.validation,org.apache.xerces.impl.xs.identity,org.apache.xerces.impl.xs.models,org.apache.xerces.impl.xs.util,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.grammars,org.apache.xerces.xni.parser,org.apache.xerces.xs,org.apache.xerces.xs.datatypes,org.w3c.dom,org.w3c.dom.ls\";version=2.12.0, \
+    org.apache.xerces.impl.xs.identity;uses:=\"org.apache.xerces.impl.xpath,org.apache.xerces.impl.xs,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xs\";version=2.12.0, \
+    org.apache.xerces.impl.xs.models;uses:=\"org.apache.xerces.impl.dtd.models,org.apache.xerces.impl.xs,org.apache.xerces.xni,org.apache.xerces.xni.parser\";version=2.12.0, \
+    org.apache.xerces.impl.xs.opti;uses:=\"org.apache.xerces.impl,org.apache.xerces.impl.dv,org.apache.xerces.impl.validation,org.apache.xerces.parsers,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.grammars,org.apache.xerces.xni.parser,org.w3c.dom\";version=2.12.0, \
+    org.apache.xerces.impl.xs.traversers;uses:=\"org.apache.xerces.impl.dv,org.apache.xerces.impl.xs,org.apache.xerces.impl.xs.util,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.parser,org.w3c.dom\";version=2.12.0, \
+    org.apache.xerces.impl.xs.util;uses:=\"org.apache.xerces.impl.xs,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.parser,org.apache.xerces.xs,org.apache.xerces.xs.datatypes,org.w3c.dom.ls\";version=2.12.0, \
+    org.apache.xerces.jaxp;uses:=\"javax.xml.parsers,javax.xml.validation,org.apache.xerces.parsers,org.apache.xerces.xs,org.w3c.dom,org.xml.sax,org.xml.sax.helpers\";version=2.12.0, \
+    org.apache.xerces.jaxp.datatype;uses:=javax.xml.datatype;version=2.12.0, \
+    org.apache.xerces.jaxp.validation;uses:=\"javax.xml.transform,javax.xml.validation,org.apache.xerces.xni.grammars,org.w3c.dom.ls,org.xml.sax\";version=2.12.0, \
+    org.apache.xerces.parsers;uses:=\"org.apache.xerces.dom,org.apache.xerces.dom3.as,org.apache.xerces.impl,org.apache.xerces.impl.dtd,org.apache.xerces.impl.dv,org.apache.xerces.impl.validation,org.apache.xerces.impl.xs,org.apache.xerces.util,org.apache.xerces.xinclude,org.apache.xerces.xni,org.apache.xerces.xni.grammars,org.apache.xerces.xni.parser,org.apache.xerces.xs,org.w3c.dom,org.w3c.dom.ls,org.xml.sax,org.xml.sax.ext\";version=2.12.0, \
+    org.apache.xerces.stax;uses:=\"javax.xml.namespace,javax.xml.stream,javax.xml.stream.events\";version=2.12.0, \
+    org.apache.xerces.stax.events;uses:=\"javax.xml.namespace,javax.xml.stream,javax.xml.stream.events\";version=2.12.0, \
+    org.apache.xerces.util;uses:=\"javax.xml.namespace,javax.xml.stream,org.apache.xerces.dom,org.apache.xerces.impl,org.apache.xerces.xni,org.apache.xerces.xni.grammars,org.apache.xerces.xni.parser,org.w3c.dom,org.w3c.dom.ls,org.xml.sax,org.xml.sax.ext\";version=2.12.0, \
+    org.apache.xerces.xinclude;uses:=\"org.apache.xerces.impl,org.apache.xerces.util,org.apache.xerces.xni,org.apache.xerces.xni.parser,org.apache.xerces.xpointer\";version=2.12.0, \
+    org.apache.xerces.xni;uses:=org.apache.xerces.xni.parser;version=2.12.0, \
+    org.apache.xerces.xni.grammars;uses:=\"org.apache.xerces.xni,org.apache.xerces.xni.parser,org.apache.xerces.xs\";version=2.12.0, \
+    org.apache.xerces.xni.parser;uses:=org.apache.xerces.xni;version=2.12.0, \
+    org.apache.xerces.xpointer;uses:=\"org.apache.xerces.impl,org.apache.xerces.util,org.apache.xerces.xinclude,org.apache.xerces.xni,org.apache.xerces.xni.parser\";version=2.12.0, \
+    org.apache.xerces.xs;uses:=\"org.apache.xerces.xs.datatypes,org.w3c.dom,org.w3c.dom.ls\";version=2.12.0, \
+    org.apache.xerces.xs.datatypes;uses:=\"javax.xml.datatype,javax.xml.namespace,org.apache.xerces.xni,org.apache.xerces.xs\";version=2.12.0, \
+    org.apache.xalan;version=2.7.2, \
+    org.apache.xalan.xslt;uses:=\"org.w3c.dom,org.xml.sax,org.apache.xalan,org.xml.sax.helpers,javax.xml.transform.sax,org.apache.xalan.res,org.apache.xml.utils,org.apache.xalan.transformer,javax.xml.transform.dom,javax.xml.parsers,javax.xml.transform,org.apache.xalan.trace,javax.xml.transform.stream\";version=2.7.2, \
+    org.apache.xalan.transformer;uses:=\"org.apache.xml.dtm,org.xml.sax.ext,org.apache.xml.serializer,org.apache.xalan.serialize,org.xml.sax,org.apache.xml.utils,javax.xml.transform,org.apache.xpath,org.apache.xalan.templates,org.apache.xalan.res,org.apache.xpath.axes,org.apache.xpath.objects,org.w3c.dom,org.xml.sax.helpers,javax.xml.parsers,org.w3c.dom.traversal,javax.xml.transform.sax,org.apache.xml.dtm.ref.sax2dtm,org.apache.xml.dtm.ref,javax.xml.transform.dom,javax.xml.transform.stream,org.apache.xpath.functions,org.apache.xalan.trace,org.apache.xalan.extensions\";version=2.7.2, \
+    org.apache.xalan.xsltc.trax;uses:=\"org.xml.sax.ext,org.xml.sax.helpers,org.w3c.dom,org.xml.sax,org.apache.xalan.xsltc.dom,org.apache.xml.serializer,org.apache.xalan.xsltc.runtime,javax.xml.parsers,javax.xml.transform.sax,javax.xml.transform,org.apache.xalan.xsltc.compiler.util,org.apache.xalan.xsltc.compiler,javax.xml,org.apache.xalan.xsltc,org.apache.xml.utils,javax.xml.transform.dom,org.apache.xalan.xsltc.runtime.output,org.apache.xml.dtm,javax.xml.transform.stream\";version=2.7.2, \
+    org.apache.xalan.xsltc.compiler.util;uses:=\"org.apache.bcel.generic,org.apache.xalan.xsltc.compiler,org.apache.bcel.classfile,org.apache.xml.utils\";version=2.7.2, \
+    org.apache.xalan.xsltc.cmdline.getopt;uses:=org.apache.xalan.xsltc.compiler.util;version=2.7.2, \
+    org.apache.xalan.lib;uses:=\"org.w3c.dom,org.apache.xml.dtm.ref,org.apache.xml.dtm,org.apache.xpath,org.apache.xpath.axes,org.apache.xalan.extensions,org.apache.xpath.objects,org.xml.sax,org.apache.xalan.res,org.apache.xml.utils,javax.xml.parsers,javax.xml.transform,org.apache.xalan.xslt,org.w3c.dom.traversal,org.xml.sax.helpers,org.apache.xml.serializer,javax.xml.transform.sax,org.apache.xalan.templates,org.apache.xalan.transformer,javax.xml.transform.stream\";version=2.7.2, \
+    org.apache.xalan.xsltc.runtime;uses:=\"org.apache.xml.serializer,org.w3c.dom,org.apache.xalan.xsltc.runtime.output,javax.xml.parsers,javax.xml.transform,org.apache.xml.dtm,org.apache.xalan.xsltc,org.apache.xalan.xsltc.dom,org.xml.sax,org.apache.xml.utils,javax.xml.transform.dom,org.apache.xml.dtm.ref\";version=2.7.2, \
+    org.apache.xalan.extensions;uses:=\"org.w3c.dom,org.apache.xpath,org.apache.xpath.objects,org.apache.xml.utils,javax.xml.transform,org.w3c.dom.traversal,org.apache.xpath.functions,org.apache.xalan.templates,org.apache.xalan.transformer,org.apache.xalan.res,org.apache.xml.dtm,org.apache.xml.dtm.ref,org.apache.xalan.trace,javax.xml.namespace,javax.xml.xpath,org.apache.xml.serializer,org.xml.sax,org.apache.xalan.serialize,org.apache.xpath.axes\";version=2.7.2, \
+    org.apache.xalan.processor;uses:=\"org.xml.sax.helpers,org.w3c.dom,org.apache.xalan.templates,org.xml.sax,org.apache.xml.utils,javax.xml.transform,javax.xml.transform.sax,org.apache.xalan.res,javax.xml.parsers,javax.xml.transform.dom,javax.xml.transform.stream,org.apache.xpath,org.apache.xpath.compiler,org.apache.xalan.extensions,org.apache.xalan.transformer\";version=2.7.2, \
+    org.apache.xalan.xsltc.runtime.output;uses:=\"org.xml.sax.ext,org.apache.xml.serializer,org.w3c.dom,org.xml.sax,javax.xml.parsers,org.apache.xalan.xsltc.trax\";version=2.7.2, \
+    org.apache.xalan.templates;uses:=\"org.apache.xpath,org.xml.sax,org.apache.xalan.res,org.apache.xml.utils,org.apache.xalan.processor,javax.xml.transform,org.apache.xpath.compiler,org.apache.xpath.objects,org.apache.xpath.operations,org.apache.xpath.functions,org.apache.xpath.axes,org.apache.xalan.transformer,org.apache.xalan.trace,org.apache.xml.dtm,org.apache.xml.serializer,org.apache.xalan.serialize,org.apache.xml.dtm.ref,org.w3c.dom,org.apache.xalan.extensions,org.apache.xml.utils.res,org.xml.sax.helpers,org.apache.xpath.patterns\";version=2.7.2, \
+    org.apache.xalan.xsltc.compiler;uses:=\"org.apache.bcel.generic,org.apache.xalan.xsltc.compiler.util,org.apache.xml.utils,java_cup.runtime,org.apache.xml.serializer,org.apache.xalan.xsltc.runtime,org.xml.sax,org.apache.bcel.util,org.apache.bcel.classfile,javax.xml.parsers,org.apache.xml.dtm\";version=2.7.2, \
+    org.apache.xalan.res;uses:=org.apache.xpath.res;version=2.7.2, \
+    org.apache.xalan.trace;uses:=\"org.w3c.dom,org.apache.xpath,org.apache.xpath.objects,org.apache.xalan.templates,org.apache.xalan.transformer,org.xml.sax,org.apache.xml.utils,javax.xml.transform,org.apache.xml.dtm,org.apache.xml.dtm.ref\";version=2.7.2, \
+    org.apache.xalan.client;uses:=\"javax.xml.transform.stream,org.apache.xalan.res,javax.xml.transform\";version=2.7.2, \
+    org.apache.xalan.lib.sql;uses:=\"org.apache.xalan.res,org.w3c.dom,org.xml.sax,org.apache.xml.dtm,org.xml.sax.ext,org.apache.xml.utils,org.apache.xml.dtm.ref,javax.xml.transform,javax.naming,org.apache.xpath,org.apache.xalan.extensions,org.apache.xpath.objects\";version=2.7.2, \
+    org.apache.xalan.xsltc;uses:=\"org.apache.xml.dtm,org.apache.xml.serializer,org.w3c.dom,org.apache.xalan.xsltc.runtime,org.xml.sax\";version=2.7.2, \
+    org.apache.xalan.xsltc.cmdline;uses:=\"org.apache.xalan.xsltc.cmdline.getopt,org.apache.xalan.xsltc.compiler,org.apache.xalan.xsltc.compiler.util,org.apache.xml.serializer,javax.xml.transform.sax,org.apache.xalan.xsltc.runtime.output,javax.xml.parsers,javax.xml.transform,org.apache.xml.dtm,org.apache.xalan.xsltc,org.xml.sax,org.apache.xalan.xsltc.runtime,org.apache.xalan.xsltc.dom\";version=2.7.2, \
+    org.apache.xalan.serialize;uses:=\"org.apache.xml.serializer,org.xml.sax,org.w3c.dom,org.apache.xml.dtm,org.apache.xpath.objects,org.apache.xpath,org.apache.xml.utils,org.apache.xalan.transformer,javax.xml.transform\";version=2.7.2, \
+    org.apache.xalan.xsltc.dom;uses:=\"org.apache.xml.dtm,org.apache.xalan.xsltc.runtime,org.apache.xml.dtm.ref,org.xml.sax.ext,org.apache.xml.serializer,org.w3c.dom,org.apache.xalan.xsltc,org.xml.sax,org.apache.xml.utils,javax.xml.transform,org.apache.xalan.xsltc.util,javax.xml.transform.sax,javax.xml.parsers,javax.xml.transform.stream,org.apache.xalan.xsltc.trax,org.apache.xml.dtm.ref.sax2dtm,javax.xml.transform.dom,org.apache.xml.res\";version=2.7.2, \
+    org.apache.xalan.xsltc.util;version=2.7.2
+
+org.osgi.framework.bootdelegation = \
+    com.sun.*, \
+    org.apache.xerces.dom, \
+    org.apache.xerces.dom.events, \
+    org.apache.xerces.dom3.as, \
+    org.apache.xerces.impl, \
+    org.apache.xerces.impl.dtd, \
+    org.apache.xerces.impl.dtd.models, \
+    org.apache.xerces.impl.dv, \
+    org.apache.xerces.impl.dv.dtd, \
+    org.apache.xerces.impl.dv.util, \
+    org.apache.xerces.impl.dv.xs, \
+    org.apache.xerces.impl.io, \
+    org.apache.xerces.impl.msg, \
+    org.apache.xerces.impl.validation, \
+    org.apache.xerces.impl.xpath, \
+    org.apache.xerces.impl.xpath.regex, \
+    org.apache.xerces.impl.xs, \
+    org.apache.xerces.impl.xs.identity, \
+    org.apache.xerces.impl.xs.models, \
+    org.apache.xerces.impl.xs.opti, \
+    org.apache.xerces.impl.xs.traversers, \
+    org.apache.xerces.impl.xs.util, \
+    org.apache.xerces.jaxp, \
+    org.apache.xerces.jaxp.datatype, \
+    org.apache.xerces.jaxp.validation, \
+    org.apache.xerces.parsers, \
+    org.apache.xerces.stax, \
+    org.apache.xerces.stax.events, \
+    org.apache.xerces.util, \
+    org.apache.xerces.xinclude, \
+    org.apache.xerces.xni, \
+    org.apache.xerces.xni.grammars, \
+    org.apache.xerces.xni.parser, \
+    org.apache.xerces.xpointer, \
+    org.apache.xerces.xs, \
+    org.apache.xerces.xs.datatypes
 
 # Adds event logging package to classes that can be serialized in ObjectMessages
 org.apache.activemq.SERIALIZABLE_PACKAGES=java.lang,java.util,org.apache.activemq,org.fusesource.hawtbuf,com.thoughtworks.xstream.mapper,org.talend.esb.eventlogging.common
