--- a/talend-esb/src/main/distribution/text/container/etc/custom.properties
+++ b/talend-esb/src/main/distribution/text/container/etc/custom.properties
@@ -27,6 +27,12 @@ karaf.framework=equinox
 karaf.systemBundlesStartLevel=50
 
 org.osgi.framework.system.packages.extra = \
+    org.apache.karaf.branding, \
+    sun.misc, \
+    org.apache.karaf.diagnostic.core;uses:=org.osgi.framework;version=4.2.3, \
+    org.apache.karaf.diagnostic.core.common;uses:=org.apache.karaf.diagnostic.core;version=4.2.3, \
+    org.apache.karaf.jaas.boot;uses:=\"javax.security.auth,javax.security.auth.callback,javax.security.auth.login,javax.security.auth.spi,org.osgi.framework\";version=4.2.3, \
+    org.apache.karaf.jaas.boot.principal;uses:=javax.security.auth;version=4.2.3, \
     com.sun.jmx.mbeanserver, \
     com.sun.management, \
     sun.management, \
@@ -90,6 +96,16 @@ org.osgi.framework.system.packages.extra = \
 
 org.osgi.framework.bootdelegation = \
     com.sun.*, \
+    javax.transaction, \
+    javax.transaction.*, \
+    javax.xml.crypto, \
+    javax.xml.crypto.*, \
+    jdk.nashorn.*, \
+    sun.*, \
+    jdk.internal.reflect, \
+    jdk.internal.reflect.*, \
+    org.apache.karaf.jaas.boot, \
+    org.apache.karaf.jaas.boot.principal, \
     org.apache.xerces.dom, \
     org.apache.xerces.dom.events, \
     org.apache.xerces.dom3.as, \
