TESB-25256 : fix for accurate service locator active/inactive status … (#73)
* TESB-25256 : fix for accurate service locator active/inactive status when camelcontext fails

* TESB-25256 : dependencies reduction

--- a/locator/pom.xml
+++ b/locator/pom.xml
@@ -24,6 +24,10 @@
         <relativePath>../pom.xml</relativePath>
 	</parent>
 
+    <properties>
+        <patch.suffix>TESB25256</patch.suffix>
+    </properties>
+
 	<dependencies>
 	    <dependency>
             <groupId>org.ops4j.pax.cdi</groupId>
@@ -91,6 +95,81 @@
             <artifactId>cxf-rt-ws-security</artifactId>
             <version>${cxf.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-cxf</artifactId>
+            <version>${camel.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jaxb-core</artifactId>
+                    <groupId>com.sun.xml.bind</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jaxb-impl</artifactId>
+                    <groupId>com.sun.xml.bind</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>cxf-rt-bindings-soap</artifactId>
+                    <groupId>org.apache.cxf</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>camel-cxf-transport</artifactId>
+                    <groupId>org.apache.camel</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>camel-http-common</artifactId>
+                    <groupId>org.apache.camel</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>camel-spring</artifactId>
+                    <groupId>org.apache.camel</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>cxf-core</artifactId>
+                    <groupId>org.apache.cxf</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>cxf-rt-transports-http</artifactId>
+                    <groupId>org.apache.cxf</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>javax.annotation-api</artifactId>
+                    <groupId>javax.annotation</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>javax.ws.rs-api</artifactId>
+                    <groupId>javax.ws.rs</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                    <groupId>org.apache.cxf</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>cxf-rt-rs-client</artifactId>
+                    <groupId>org.apache.cxf</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>javax.servlet-api</artifactId>
+                    <groupId>javax.servlet</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-beans</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-context</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-core</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 		<!-- Test dependencies -->
         <dependency>
             <groupId>org.apache.cxf</groupId>
@@ -130,11 +209,18 @@
             <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 	<build>
 		<plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-xjc-plugin</artifactId>
@@ -152,10 +238,18 @@
                                     <xsd>${basedir}/src/main/resources/schemas/locator-endpoint.xsd</xsd>
                                     <bindingFile>${basedir}/src/main/resources/schemas/locator-endpoint.xjb</bindingFile>
 									<catalog>${basedir}/src/main/build-resources/catalog.cat</catalog>
+                                    <extensionArgs>
+                                        <arg>-encoding</arg>
+                                        <arg>UTF-8</arg>
+                                    </extensionArgs>
                                 </xsdOption>
                                 <xsdOption>
                                     <xsd>${basedir}/src/main/resources/schemas/ws-addr.xsd</xsd>
                                     <bindingFile>${basedir}/src/main/resources/schemas/ws-addr.xjb</bindingFile>
+                                    <extensionArgs>
+                                        <arg>-encoding</arg>
+                                        <arg>UTF-8</arg>
+                                    </extensionArgs>
                                 </xsdOption>
                             </xsdOptions>
                         </configuration>
@@ -180,6 +274,7 @@
                             org.talend.esb.servicelocator.client.ExpiredEndpointCollector,
                             org.talend.esb.servicelocator.cxf.LocatorFeature
                         </Export-Service>
+                        <TESB-Version>${patch.suffix}</TESB-Version>
                     </instructions>
                 </configuration>
             </plugin>
