TESB-24788 Upgrade to Apache Karaf Decanter 2.2.0

--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.appender.jms.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.appender.jms.cfg
@@ -2,8 +2,8 @@
 # Decanter JMS Appender Configuration
 #####################################
 
-# Name of the JMS connection factory
-connection.factory.name=jms/tesbem
+# JMS connection factory to use
+connectionFactory.target=(osgi.jndi.service.name=jms/tesbem)
 
 # Name of the destination
 destination.name=eventmonitoring
