--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.collector.jms.cfg
@@ -2,8 +2,8 @@
 # Decanter JMS Collector Configuration
 #####################################
 
-# Name of the JMS connection factory
-connection.factory.name=jms/tesbem
+# JMS connection factory to use
+connectionFactory.target=(osgi.jndi.service.name=jms/tesbem)
 
 # Name of the destination
 destination.name=eventmonitoring
@@ -27,3 +27,7 @@ fields.add.eventType = OSGiEvent
 fields.remove.subject = true
 fields.add.agentId = agent1
 fields.remove.message = true
+
+# Unmarshaller to use (json is recommended)
+# unmarshaller.target=(dataFormat=raw) or whatever to use raw text message
+unmarshaller.target=(dataFormat=json)
