--- a/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.appender.file.cfg
+++ b/talend-esb/src/main/distribution/text/container/etc/org.apache.karaf.decanter.appender.file.cfg
@@ -8,3 +8,6 @@ marshaller.target = (dataFormat=json)
 # File
 # File Name is commented out as we use a log4j2 configuration by default in Talend Runtime – see /etc/org.ops4j.pax.logging.cfg
 filename = ${karaf.data}/eventmonitoring/em.log
+
+# Append file
+#append=true
